--- a/templates/crypto-chooser.html
+++ b/templates/crypto-chooser.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
+<h1 id="num">hello</h1>
+<script>
+    var socket = new WebSocket('ws://localhost:8000/ws/some_url/')
 
+    socket.onmessage = function (event) {
+        var data = JSON.parse(event.data);
+        console.log(data)
+        $('#num').html(data.message)
+    }
+</script>
 </body>
 </html>
