--- a/templates/crypto-chooser.html
+++ b/templates/crypto-chooser.html
@@ -1,33 +1,75 @@
+{% load crispy_forms_filters %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Crypto Price Service</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
-<body>
-<textarea id="num" disabled></textarea>
-{#<button id="button">ok</button>#}
-<form>
-    {{ form.as_p }}
-    <button type="button" id="button">ok</button>
-</form>
+<body class="bg-primary">
+<div class="container-fluid">
+    <div class="row">
+        <table class="table table-striped table-dark table-hover">
+            <thead>
+            <tr>
+                <th scope="col">TimeStamp</th>
+                <th scope="col">Input Price</th>
+                <th scope="col">Close Price</th>
+                <th scope="col">Status</th>
+            </tr>
+            </thead>
+            <tbody id="tbody">
+            </tbody>
+        </table>
+        <div id="alert" class="alert alert-danger col-10 mx-auto my-5 d-none" role="alert">
+            Please fill all fields!
+        </div>
+        <form class="text-white my-2 p-5">
+            {{ form | crispy }}
+            <button id="button" class="btn btn-success my-2" type="button">OK</button>
+        </form>
+    </div>
+</div>
 <script>
-    var socket = new WebSocket('ws://localhost:8000/ws/some_url/')
-
-    socket.onmessage = function (event) {
-        var data = JSON.parse(event.data);
-        console.log(data)
-        $('#num').html(data.message)
-    }
-
     $('#button').click(function () {
-        socket.send(JSON.stringify({
-            "symbol": $('#id_symbol').val(),
-            "price": $('#id_price').val(),
-        }))
-    })
+            if ($('#id_symbol').val() && $('#id_price').val() && $('#id_channel_name').val()) {
+                $('#alert').fadeOut()
+                const socket = new WebSocket(
+                    'ws://'
+                    + window.location.host
+                    + '/ws/price/'
+                    + $('#id_channel_name').val()
+                    + '/'
+                )
+
+                socket.onmessage = function (event) {
+                    const data = JSON.parse(event.data)
+                    let html = `<tr><td>${data.message.timestamp}</td><td>${data.message.input_price}</td><td>${data.message.close_price}</td><td>${data.message.status}</td></tr>`
+                    $('#tbody').append(html)
+                }
+
+                socket.onopen = function () {
+                    setInterval(function () {
+                        socket.send(JSON.stringify({
+                            "symbol": $('#id_symbol').val(),
+                            "price": $('#id_price').val(),
+                        }))
+                    }, 10000)
+                }
+
+                {#$('#button').fadeOut()#}
+                $("id_price").disabled = true
+                $("id_symbol").prop('disabled', true)
+            }
+
+            else {
+                $('#alert').fadeOut(0).removeClass('d-none').fadeOut(0).fadeIn()
+            }
+        }
+    )
+
 </script>
 </body>
 </html>
